[tool.poetry]
name = "async-chat"
version = "0.1.0"
description = ""
authors = ["Maxim-Pekov <max.pekov@gmail.com>"]
readme = "README.md"
packages = [{include = "async_chat"}]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
